--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,7 @@
       "type": "image/png"
     }
   ],
-  "start_url": "/",
+  "start_url": "/claybot/",
   "background_color": "#ffffff",
   "display": "standalone",
   "scope": "/",
