--- a/manifest.json
+++ b/manifest.json
@@ -16,6 +16,6 @@
   "start_url": "/claybot/",
   "background_color": "#ffffff",
   "display": "standalone",
-  "scope": "/",
+  "scope": "/claybot/",
   "theme_color": "#1a73e8"
 }
