--- a/manifest.json
+++ b/manifest.json
@@ -13,9 +13,9 @@
       "type": "image/png"
     }
   ],
-  "start_url": "/claybot/",
+  "start_url": "./",
+  "scope": "./",
   "background_color": "#ffffff",
   "display": "standalone",
-  "scope": "/claybot/",
   "theme_color": "#1a73e8"
 }
